fix background on dark mode

--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -1,6 +1,5 @@
 .main {
   display: flex;
-  background-color: white;
   color: black;
 }
 
